# calculatorOnMac

./: CMakeLists.txt  README.md
src/CalcConsole/: CMakeLists.txt  main.cpp
src/CalcManager/: CMakeLists.txt  CalcBridge.cpp  CalcBridge.h
src/MacApp/: Package.swift  build_app.sh
src/MacApp/Calculator.app/Contents/: Info.plist
src/MacApp/Sources/CalcManagerLib/: CalcBridge.cpp
src/MacApp/Sources/CalcManagerLib/include/: CalcBridge.h  CalcManagerLib.h  module.modulemap  pch.h
src/MacApp/Sources/CalculatorMac/: CalculatorEngine.swift  CalculatorMacApp.swift  ContentView.swift  Info.plist
